<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/padding_16">

    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/margin_4"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_txt_cp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/codigo_postal"
        android:singleLine="true"
        android:layout_marginEnd="@dimen/margin_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="5"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/text_input_layout"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/txt_18"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="@dimen/margin_1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_txt_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pais"
        android:layout_marginStart="@dimen/margin_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/text_input_layout"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_18"
            android:enabled="false"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="@dimen/margin_1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_txt_entity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:hint="@string/entidad"
        android:layout_marginEnd="@dimen/margin_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/text_input_layout"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_cp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_entity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_18"
            android:enabled="false"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="@dimen/margin_1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_txt_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ciudad"
        android:layout_marginStart="@dimen/margin_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/text_input_layout"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/edit_txt_entity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_18"
            android:enabled="false"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="@dimen/margin_1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_txt_municipy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/alcadia_o_municipio"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/text_input_layout"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_entity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_municpy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_18"
            android:enabled="false"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="@dimen/margin_1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_txt_colony"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/colonia"
        android:layout_marginStart="@dimen/margin_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintAnimationEnabled="true"
        app:hintTextAppearance="@style/text_input_layout"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/edit_txt_municipy">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_colony"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_18"
            android:enabled="false"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="@dimen/margin_1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/margin_36"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        class="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_colony" />

</androidx.constraintlayout.widget.ConstraintLayout>